Alterando o estilo dos botöes
Alterando o estilo dos botöes

--- a/omma-receitas.html
+++ b/omma-receitas.html
@@ -30,8 +30,8 @@
                 <h2 style="color: #FFA000">risoto de abobora</h2>
                 <img src="imagens/risoto.png" alt="Risoto de abóbora" class="imagem-risoto"/>
                 <br><br>
-                <button>fácil</button>
-                <button>serve 4 pessoas</button>
+                <button class="button">fácil</button>
+                <button class="button">serve 4 pessoas</button>
                 <ul class="ingredientes">
                     <li class="titulo">Ingredientes</li>
                     <li>1/2 kg de abóbora tipo kabotchá</li>
